mise à jour du thème

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,4 +43,6 @@
     <meta name="twitter:image" content="{{ site.baseurl | prepend: site.url }}{{ site.images }}/bg.svg">
   {% endif %}
 
+  {% include js_head.html %}
+
 </head>
