--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,5 +29,6 @@
     {% endif %}
 
     <label for="menu-checkbox" class="toggle-button" data-open="☰" data-close="☰" onclick></label>
+    <img src="/files/theme/logo_simple.png" class="logo-image" alt="{{ site.title }}"/>
   </nav>
 </header>
