--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -13,6 +13,7 @@
 @import "ui/prev-next";
 @import "ui/call-to-action";
 @import "ui/publication-date";
+@import "ui/tarteaucitron";
 @import "ui/widgets/big-button";
 @import "ui/widgets/meetup";
 @import "ui/widgets/speakerdeck";
@@ -22,4 +23,5 @@
 @import "media-queries/0-base";
 @import "media-queries/1-medium";
 @import "media-queries/2-large";
+@import "media-queries/3-xlarge";
 
