--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,5 @@
+$xl-break-point: 1180px;
 $lg-break-point: 960px;
 $md-break-point: 640px;
-
-$content-wrapper-width: 62%;
 
 $call-to-action-color: #ed0678;
