--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -116,6 +116,17 @@
       background: none;
     }
   }
+
+  .logo-image {
+    position: absolute;
+    display: block;
+    width: 50px;
+    height: 50px;
+    right: 0;
+    top: 0;
+    padding: 5px;
+  }
+
 }
 
 @media screen and (min-width: $md-break-point){
