--- a/_sass/media-queries/_2-large.scss
+++ b/_sass/media-queries/_2-large.scss
@@ -17,7 +17,7 @@
 
   .content-container {
     margin: 0 auto;
-    max-width: $content-wrapper-width;
+    max-width: 85%;
   }
 
   article {
@@ -36,8 +36,12 @@
   }
 
   .link-to-post {
-    margin: 50px auto;
+    margin: 50px 10px 50px 0;
     padding: 2em;
+
+    &:last-child {
+      margin-right: 0;
+    }
 
     .fas {
       margin: 0 8px;
